--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -250,7 +250,7 @@ h4, .h4
 	display: flex
 	flex-direction: column
 	transform: translateX(100%)
-	background-color: $color-primary
+	background: $color-primary url(../img/menu.svg) no-repeat center bottom
 	z-index: 99		
 	transition: all .65s cubic-bezier(0.645, 0.045, 0.355, 1) .75s
 	.container 	
@@ -258,7 +258,7 @@ h4, .h4
 		padding-bottom: 14px
 		margin-top: auto
 		margin-bottom: auto
-	.logo
+	.logo img
 		opacity: 0
 		transition-delay: .5s
 	.lang-wrap
@@ -270,7 +270,7 @@ h4, .h4
 	.menubar-in &
 		transform: translateX(0)
 		transition-delay: 0s
-		.logo 
+		.logo img
 			opacity: 1
 			transition-delay: .6s
 		.lang-wrap
