--- a/css/style.css
+++ b/css/style.css
@@ -738,7 +738,7 @@ h4, .h4 {
   display: flex;
   flex-direction: column;
   transform: translateX(100%);
-  background-color: #602d91;
+  background: #602d91 url(../img/menu.svg) no-repeat center bottom;
   z-index: 99;
   transition: all 0.65s cubic-bezier(0.645, 0.045, 0.355, 1) 0.75s; }
   .menubar .container {
@@ -746,7 +746,7 @@ h4, .h4 {
     padding-bottom: 14px;
     margin-top: auto;
     margin-bottom: auto; }
-  .menubar .logo {
+  .menubar .logo img {
     opacity: 0;
     transition-delay: 0.5s; }
   .menubar .lang-wrap {
@@ -758,7 +758,7 @@ h4, .h4 {
   .menubar-in .menubar {
     transform: translateX(0);
     transition-delay: 0s; }
-    .menubar-in .menubar .logo {
+    .menubar-in .menubar .logo img {
       opacity: 1;
       transition-delay: 0.6s; }
     .menubar-in .menubar .lang-wrap {
