--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -147,6 +147,7 @@ h4, .h4
 .scroll-icon
 	position: absolute
 	z-index: 1
+	width: 175px
 	@media (max-width: 1199.98px)
 		display: none
 
@@ -532,11 +533,24 @@ h4, .h4
 
 .section-1
 	padding: 91px 0 244px
+	position: relative
+	@media (min-width: 1200px)
+		&:before
+			content: ''
+			position: absolute
+			right: 40px
+			top: 130px
+			width: 350px
+			height: 350px
+			background-image: url(../img/circle.svg)
+			background-size: cover
+			animation: circle 74s infinite linear
 	.scroll-icon-wrap
 		z-index: -1
 		.scroll-icon
 			transform: translate(0, -50%)
 			animation: scrollIcon linear infinite 6s
+			width: auto
 	.block
 		color: #fff
 		background-color: $color-danger
@@ -596,7 +610,7 @@ h4, .h4
 				@media (min-width: 992px) and (max-width: 1199.98px)
 					padding-top: 40px
 	.scroll-icon
-		right: 40px
+		right: 0
 		top: 208px
 		z-index: -1
 	.scroll-icon-wrap .scroll-icon
@@ -611,6 +625,11 @@ h4, .h4
 	padding: 140px 0
 	background-color: $color-gray
 	position: relative
+	@media (min-width: 1200px)
+		background-image: url(../img/dots-2.svg)
+		background-repeat: no-repeat 
+		background-position: 10px 10px
+		background-size: 300px
 	.block-wrap
 		position: relative
 		@media (min-width: 576px)
@@ -919,10 +938,21 @@ h4, .h4
 	padding: 140px 0
 	background-color: $color-gray
 	position: relative
-	.scroll-icon
-		left: 53px
 	@media (max-width: 1199.98px)
 		padding: 70px 0
+	.scroll-icon
+		left: 53px
+	@media (min-width: 1200px)
+		&:before
+			content: ''
+			position: absolute
+			right: 40px
+			top: 130px
+			width: 300px
+			height: 300px
+			background-image: url(../img/circle.svg)
+			background-size: cover
+			animation: circle 74s infinite linear
 
 .card-my
 	background-color: #fff
@@ -944,6 +974,9 @@ h4, .h4
 .section-7
 	padding: 140px 0
 	position: relative
+	@media (min-width: 1200px)
+		background: url(../img/dots.svg) no-repeat calc(100% - 50px) 100px
+		background-size: 400px
 	.row:not(.no-gutters)
 		margin-left: -8px
 		margin-right: -8px
@@ -979,6 +1012,12 @@ h4, .h4
 	color: #fff !important
 	background-position: center
 	background-size: cover
+	@media (max-width: 1499.98px)
+		font-size: 26px
+		padding: 150px 42px 20px
+	@media (max-width: 1199.98px)
+		font-size: 24px
+		padding: 170px 26px 6px
 	&:before
 		content: ''
 		position: absolute
@@ -1002,17 +1041,29 @@ h4, .h4
 	> *
 		position: relative
 		z-index: 9
-	@media (max-width: 1499.98px)
-		font-size: 26px
-		padding: 150px 42px 20px
-	@media (max-width: 1199.98px)
-		font-size: 24px
-		padding: 170px 26px 6px
+	@media (min-width: 1200px)
+		[class*="col"]:first-child > &
+			&:after
+				content: ''
+				position: absolute
+				top: -225px
+				left: -225px
+				width: 450px
+				height: 450px
+				background-image: url(../img/circle.svg)
+				background-size: cover
+				animation: circle 74s infinite linear
+				z-index: -1
+@keyframes circle
+	100%
+		transform: rotate(360deg)
 
 .section-8
 	padding: 100px 0
 	overflow: hidden
 	position: relative
+	@media (max-width: 1199.98px)
+		padding: 70px 0
 	&:before 
 		content: ''
 		position: absolute
@@ -1030,8 +1081,6 @@ h4, .h4
 		position: relative
 	.owl-stage-outer
 		overflow: visible
-	@media (max-width: 1199.98px)
-		padding: 70px 0
 
 .page-footer
 	color: $color-footer
