--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -14,7 +14,10 @@ body
 		bottom: 0
 		left: 0
 		transition: $transition
-		background: url(../img/pace.png) no-repeat center
+		background: $color-info url(../img/logo-white.svg) no-repeat center
+		background-size: 500px
+		@media (max-width: 991.98px)
+			background-size: 297px
 	&.menubar-in
 		overflow: hidden
 
@@ -23,7 +26,6 @@ body
 	visibility: hidden
 	transition: $transition
 .pace-done 
-	background: none
 	&:before 
 		opacity: 0
 		visibility: hidden
@@ -41,7 +43,7 @@ body
 		top: 0
 		right: 100%
 		width: 100%
-		border-top: 3px solid $color-primary
+		border-top: 3px solid #fff
 		z-index: 99999
 
 @import fonts, xxl
@@ -217,6 +219,7 @@ h4, .h4
 		position: relative
 		img 
 			transition: $transition
+			height: 50px
 			&.logo-white
 				opacity: 0
 				position: absolute
@@ -290,6 +293,8 @@ h4, .h4
 	@media (max-width: 991.98px)
 		font-size: 30px
 		padding: 40px 0
+	@media (max-width: 767.98px)
+		padding: 0
 	> li
 		padding: 20px 0
 		cursor: pointer
@@ -316,12 +321,16 @@ h4, .h4
 			line-height: .8
 			transition: $transition
 			border-right: 3px solid transparent
+			&[aria-expanded="true"]
+				@media (max-width: 991.98px)
+					padding-left: 12px
+					color: $color-danger
 		.sub-menu
 			font-size: 31px
 			font-weight: 500
 			list-style: none
 			transition: $transition
-			@media (min-width: 576px)
+			@media (min-width: 992px)
 				padding: 2px 20px 2px 152px
 				position: absolute
 				left: 100%
@@ -329,14 +338,13 @@ h4, .h4
 				white-space: nowrap
 				opacity: 0
 				visibility: hidden
+				height: auto !important
+				display: block !important
 			@media (max-width: 991.98px)
 				font-size: 20px
-				padding: 6px 20px 6px 100px
-			@media (max-width: 767.98px)
-				padding-left: 50px
-			@media (max-width: 575.98px)
-				display: none
-				padding: 12px 12px 0
+				padding: 0 12px
+				> li:first-child 
+					padding-top: 12px
 			a 
 				padding: 7px 0
 				@media (max-width: 991.98px)
@@ -344,23 +352,17 @@ h4, .h4
 				&:hover 
 					color: $color-danger
 		&:hover
-			> a
-				padding-left: 12px
-				color: $color-danger
-				@media (min-width: 576px)
+			@media (min-width: 992px)
+				> a
+					padding-left: 12px
+					color: $color-danger
 					border-right-color: $color-danger
-			.sub-menu
-				@media (min-width: 576px)
+				.sub-menu
 					opacity: 1
 					visibility: visible
-		> a 
-			&:focus
-				~ .sub-menu
-					@media (max-width: 575.98px)
-						display: block
 	.menubar-in &
 		transition-delay: 1s
-		@media (min-width: 576px)
+		@media (min-width: 992px)
 			border-right-color: rgba(255, 255, 255, .3)
 		> li
 			opacity: 1
@@ -535,18 +537,31 @@ h4, .h4
 .section-1
 	padding: 91px 0 244px
 	position: relative
-	@media (min-width: 1200px)
-		&:before
+	// @media (min-width: 1200px)
+	// 	&:before
+	// 		content: ''
+	// 		position: absolute
+	// 		right: 80px
+	// 		top: 130px
+	// 		width: 350px
+	// 		height: 350px
+	// 		border-radius: 50%
+	// 		background-image: url(../img/circle.svg)
+	// 		background-size: cover
+	// 		animation: circle 74s infinite linear
+	.img-wrap	
+		position: relative
+		overflow: hidden
+		&:after 	
 			content: ''
 			position: absolute
-			right: 80px
-			top: 130px
-			width: 350px
-			height: 350px
-			border-radius: 50%
-			background-image: url(../img/circle.svg)
-			background-size: cover
-			animation: circle 74s infinite linear
+			width: 30%
+			top: 0
+			left: 20px
+			bottom: 0
+			transform: rotateX(180deg)
+			background: url(../img/scroll-4.svg) center bottom
+			background-repeat: no-repeat
 	.scroll-icon-wrap
 		z-index: -1
 		.scroll-icon
@@ -559,10 +574,29 @@ h4, .h4
 		padding: 80px 90px 55px 80px
 		margin-top: -347px
 		position: relative
+		p
+			position: relative
 		.scroll-icon
 			right: 0
 			bottom: calc(100% + 167px)
 			z-index: -1
+		.svg-wrap
+			position: absolute
+			top: 0
+			right: 0
+			bottom: 0
+			left: 0
+			overflow: hidden
+			.svg
+				position: absolute
+				left: 10px
+				top: -20%
+				height: 140%
+				width: auto
+			@media (max-width: 1199.98px)
+				display: none
+		.quote
+			animation: quote linear infinite 8s
 		@media (max-width: 1499.98px)
 			padding: 50px 50px 24px
 		@media (max-width: 1199.98px)
@@ -579,13 +613,26 @@ h4, .h4
 @keyframes scrollIcon
 	50%
 		transform: translate(-50px, -50%)
-
-.section-2
-	.img
-		filter: grayscale(1)
+@keyframes quote
+	50%
+		transform: translateX(10px)
 
 .section-3
 	padding: 100px 0 140px
+	@media (max-width: 1199.98px)
+		padding: 70px 0
+	.img-wrap	
+		position: relative
+		overflow: hidden
+		&:after 	
+			content: ''
+			position: absolute
+			width: 60%
+			top: 0
+			left: 0
+			bottom: 0
+			background-image: url(../img/svg-bg-2.svg)
+			background-repeat: no-repeat
 	.container-fluid
 		@media (min-width: 1200px)
 			padding: 0 90px
@@ -594,7 +641,14 @@ h4, .h4
 				> .col 
 					@media (min-width: 992px)
 						padding-bottom: 120px 
-			+ .row > [class*="col"] > img
+			+ .row > [class*="col"] > .img-wrap
+				&:after
+					width: 40%
+					top: 0
+					left: -20%
+					bottom: 0
+					background-image: url(../img/scroll-7.svg)
+					background-position: center bottom
 				@media (min-width: 992px)
 					margin-top: -100px
 			> .col 
@@ -615,8 +669,7 @@ h4, .h4
 		left: 0
 		top: 104px
 		z-index: 1
-	@media (max-width: 1199.98px)
-		padding: 70px 0
+		
 
 .section-4
 	padding: 140px 0
@@ -642,7 +695,8 @@ h4, .h4
 				right: 0
 				bottom: 0
 				left: 0
-				background-color: $color-primary
+				background: $color-primary url(../img/menu.svg) center bottom
+				background-repeat: no-repeat
 				opacity: .9
 	.block-sm-wrap
 		position: absolute
@@ -712,6 +766,8 @@ h4, .h4
 
 .owl-carousel
 	position: relative
+	.owl-stage-outer
+		cursor: ew-resize
 	.owl-dots
 		font-size: 0
 		position: absolute
@@ -781,6 +837,7 @@ h4, .h4
 		position: relative
 		background-size: cover
 		background-position: center
+		overflow: hidden
 		.play
 			width: 70px
 			height: 70px
@@ -792,21 +849,45 @@ h4, .h4
 			background-size: cover
 			&:hover 
 				opacity: .7
-		&.video:before
+		&:after
 			content: ''
 			position: absolute
-			top: 0
-			right: 0
+			width: 183px
+			height: 127px
 			bottom: 0
 			left: 0
-			background-color: #000
-			opacity: .2
+			background-image: url(../img/svg-white.svg)
+			background-size: cover
+			transition: $transition
+			animation: hover 30s infinite linear
+			opacity: 0
+		&:hover 
+			&:after
+				opacity: 1
+		&.video
+			&:before
+				content: ''
+				position: absolute
+				top: 0
+				right: 0
+				bottom: 0
+				left: 0
+				background-color: #000
+				opacity: .2
+			&:after
+				width: 117px
+				height: 105px
+				left: auto
+				right: 10px
+				background-image: url(../img/scroll-2.svg)
+				animation: none
+@keyframes hover
+	50%
+		left: -50px
 
 .icon
 	height: 22px
 	margin-bottom: 12px
-.icon-2
-	height: 70px
 
 .section-5
 	padding: 140px 0
@@ -958,16 +1039,34 @@ h4, .h4
 	flex-direction: column
 	height: 100%
 	transition: $transition
-	&:hover 
-		transform: translateY(-10px)
-		box-shadow: 0 5px 10px rgba(0, 0, 0, .05)
-	.card-my-body 
+	.img-wrap
+		position: relative
+		&:after 	
+			content: ''
+			position: absolute
+			top: 0
+			right: 0
+			bottom: -1px
+			left: 0
+			background-image: url(../img/svg-white-2.svg)
+			background-repeat: no-repeat
+			background-position: center bottom
+			transition: $transition
+			opacity: 0
+	.card-my-body
 		padding: 40px
 		flex-grow: 1
 		display: flex
 		flex-direction: column
 		@media (max-width: 1199.98px)
 			padding: 20px
+	&:hover 
+		transform: translateY(-10px)
+		box-shadow: 0 5px 10px rgba(0, 0, 0, .05)
+		.img-wrap
+			position: relative
+			&:after 
+				opacity: 1
 
 .section-7
 	padding: 140px 0
@@ -991,16 +1090,24 @@ h4, .h4
 	@media (max-width: 1199.98px)
 		padding: 70px 0
 
+.icon-2
+	height: 70px
+	transition: $transition
+
 .row.li
 	padding: 50px 0
 	border-top: 1px solid $color-hr
+	@media (max-width: 1199.98px)
+		padding: 30px 0
 	&:last-child 
 		border-bottom: 1px solid $color-hr
 		margin-bottom: 140px
 		@media (max-width: 1199.98px)
 			margin-bottom: 70px
-	@media (max-width: 1199.98px)
-		padding: 30px 0
+	@media (min-width: 1200px)
+		&:hover 
+			.icon-2 
+				transform: translateX(10px)
 
 .item
 	font-size: 30px
@@ -1064,18 +1171,19 @@ h4, .h4
 	position: relative
 	@media (max-width: 1199.98px)
 		padding: 70px 0
-	&:before 
-		content: ''
+	> span
 		position: absolute
 		top: 0
 		bottom: 0
 		left: 0
 		width: 45%
 		background-color: $color-bg
-		background-image: url(../img/instagram.png)
-		background-size: 172px
-		background-position: calc(100% - 69px) 100px
-		background-repeat: no-repeat
+		overflow: hidden
+		img 	
+			position: absolute
+			width: 172px
+			top: 100px
+			right: 69px
 		@media (max-width: 575.98px)
 			width: 100%
 	.container
