--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -152,6 +152,15 @@ h4, .h4
 	width: 175px
 	@media (max-width: 1199.98px)
 		display: none
+.double-svg
+	position: absolute
+	bottom: -8px
+	right: 11px
+	width: 81%
+	animation: double linear infinite 3s
+@keyframes double
+	50%
+		bottom: -28px
 
 .relative
 	position: relative
