--- a/css/sass/style.sass
+++ b/css/sass/style.sass
@@ -1023,7 +1023,7 @@ h4, .h4
 			background-image: url(../img/svg-white-2.svg)
 			background-repeat: no-repeat
 			background-position: center bottom
-			transition: $transition
+			transition: 1s
 			opacity: 0
 			transform: translateY(10px)
 	.card-my-body
@@ -1038,7 +1038,7 @@ h4, .h4
 		box-shadow: 0 5px 10px rgba(0, 0, 0, .05)
 		.img-wrap
 			&:after 
-				opacity: 1
+				opacity: .7
 				transform: none
 
 .section-7
